2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: fixed criteria for synchronising the angle of the
	actor to the body.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: synchronise body/actor when rotation of actor has
	changed.
	* examples/blockbox.c: added rotation of actor to middle mousebutton
	(left mouse button does dragging.)
	* README: added some notes about current limitations of transforms.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* examples/blockbox.c (actor_manipulator_press),
	(actor_manipulator_motion), (actor_manipulator_release)
	(enable_actor_manipulation):  made the code to move actors around
	reside in logic embedded in the stage instead of for each separate
	actor.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* README: updated with information about where to check out box2d from
	svn and a known to be good revision.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* examples/blockbox.c: added 'about' screen as well as play|pause
	toggle for the simulation.

2008-04-03  Øyvind Kolås  <pippin@o-hand.com>

	Initial svn import of clutter-box2d.

	* box2d-build-and-install-shared.patch: a patch for box2d's build
	system making it build a shared library and install a usable header.

	* clutter-box2d.h:
	* clutter-box2d.cpp: actual box2d glue group.
	* clutter-box2d.pc.in: pkg-config file for clutter-box2d
	* examples/blockbox.c: a small framework for adding more clutter-box2d
	tests.

	* autogen.sh: distribution boilerplate stuff, mostly lifted from
	clutter-cairo with minimal search and replace.
	* configure.ac:
	* Makefile.am:
	* examples/Makefile.am:
	* AUTHORS:
	* COPYING:
	* INSTALL:
	* README: